# zed-crystal

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.json  extension.toml
grammars/: .gitignore  crystal.toml
languages/crystal/: brackets.scm  config.toml  embedding.scm  highlights.scm  indents.scm  injections.scm  outline.scm  runnables.scm  tasks.json
languages/ecr/: brackets.scm  config.toml  highlights.scm  injections.scm
src/: crystal.rs
